--- a/app/src/main/res/layout/learning.xml
+++ b/app/src/main/res/layout/learning.xml
@@ -62,12 +62,16 @@
             android:layout_height="40dp"
             android:layout_marginEnd="8dp">
 
-            <ImageView
+            <View
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/bg_tab_unselected"
                 android:scaleType="centerCrop"
-                android:layout_marginTop="-63dp"/>
+                android:layout_marginStart="-29dp"
+                android:layout_marginEnd="-30dp"
+                android:layout_marginTop="-6dp"
+                android:layout_marginBottom="-67dp"
+                android:adjustViewBounds="true"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -117,14 +121,14 @@
                 android:layout_marginBottom="16dp"
                 android:elevation="2dp">
 
-                <ImageView
+                <View
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_card"
-                    android:layout_marginStart="-30dp"
-                    android:layout_marginEnd="-23dp"
-                    android:layout_marginTop="-10dp"
-                    android:layout_marginBottom="-40dp"
+                    android:layout_marginStart="-29dp"
+                    android:layout_marginEnd="-30dp"
+                    android:layout_marginTop="-6dp"
+                    android:layout_marginBottom="-67dp"
                     android:adjustViewBounds="true"
                     android:scaleType="centerCrop"/>
 
@@ -179,7 +183,7 @@
                             android:textSize="13sp"
                             android:layout_marginTop="8dp"
                             android:backgroundTint="#8B5CF6"
-                            android:background="@drawable/bg_purple_button" />
+                            android:background="@drawable/bg_tab_selected" />
                     </LinearLayout>
 
                     <ImageView
@@ -201,10 +205,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_card"
-                    android:layout_marginStart="-20dp"
-                    android:layout_marginEnd="-63dp"
-                    android:layout_marginTop="-63dp"
-                    android:layout_marginBottom="-84dp"
+                    android:layout_marginStart="-29dp"
+                    android:layout_marginEnd="-30dp"
+                    android:layout_marginTop="-6dp"
+                    android:layout_marginBottom="-67dp"
                     android:adjustViewBounds="true"
                     android:scaleType="centerCrop"/>
 
@@ -259,7 +263,7 @@
                             android:textSize="13sp"
                             android:layout_marginTop="8dp"
                             android:backgroundTint="#8B5CF6"
-                            android:background="@drawable/bg_purple_button" />
+                            android:background="@drawable/bg_tab_selected" />
                     </LinearLayout>
 
                     <ImageView
