--- a/app/src/main/res/layout/bottom_nav.xml
+++ b/app/src/main/res/layout/bottom_nav.xml
@@ -18,7 +18,8 @@
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/ic_home" />
+            android:src="@drawable/ic_home"
+            android:tint="#7A5CFA"/>
 
         <TextView
             android:layout_width="wrap_content"
