--- a/app/src/main/res/layout/learning.xml
+++ b/app/src/main/res/layout/learning.xml
@@ -9,7 +9,8 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:padding="16dp">
+        android:paddingStart="30dp"
+        android:paddingTop="25dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -34,7 +35,8 @@
         android:layout_marginBottom="12dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingHorizontal="16dp">
+        android:paddingStart="30dp"
+        android:paddingTop="16dp">
 
         <FrameLayout
             android:layout_width="wrap_content"
@@ -89,8 +91,6 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent">
 
-            <ImageView android:layout_width="wrap_content"
-
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -117,12 +117,13 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:paddingHorizontal="16dp">
+        android:paddingHorizontal="30dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingTop="16dp">
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -149,8 +150,8 @@
                     android:padding="16dp">
 
                     <ImageView
-                        android:layout_width="64dp"
-                        android:layout_height="64dp"
+                        android:layout_width="85dp"
+                        android:layout_height="61dp"
                         android:layout_gravity="center_vertical"
                         android:layout_marginEnd="16dp"
                         android:src="@drawable/react_logo" />
@@ -229,8 +230,8 @@
                     android:padding="16dp">
 
                     <ImageView
-                        android:layout_width="64dp"
-                        android:layout_height="64dp"
+                        android:layout_width="85dp"
+                        android:layout_height="61dp"
                         android:layout_gravity="center_vertical"
                         android:layout_marginEnd="16dp"
                         android:src="@drawable/react_logo" />
