--- a/app/src/main/res/drawable/bg_button.xml
+++ b/app/src/main/res/drawable/bg_button.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#841ffd"/>
+    <solid android:color="#841FFD"/>
     <corners android:radius="8.56dp"/>
 </shape>
