--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -4,29 +4,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FAFAFA"
-    android:padding="16dp">
-
+    android:paddingHorizontal="30dp"
+    android:clipChildren="false">
     <ImageView
         android:id="@+id/backIcon"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:src="@drawable/ic_back"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="30dp" />
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="AWS Certification"
         android:textStyle="bold"
         android:textSize="18sp"
         android:textColor="#000000"
+        android:gravity="center"
         app:layout_constraintStart_toEndOf="@id/backIcon"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/timerContainer"
+        app:layout_constraintTop_toTopOf="@id/backIcon"
         app:layout_constraintBottom_toBottomOf="@id/backIcon"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginStart="16dp"/>
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"/>
 
     <LinearLayout
         android:id="@+id/timerContainer"
@@ -36,7 +39,8 @@
         android:paddingHorizontal="12dp"
         android:gravity="center"
         android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="-5dp"
+        app:layout_constraintTop_toTopOf="@id/backIcon"
         app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
@@ -52,7 +56,6 @@
             android:textColor="#fff"
             android:layout_marginStart="6dp"/>
     </LinearLayout>
-
     <LinearLayout
         android:id="@+id/questionNumbers"
         android:layout_width="match_parent"
@@ -65,78 +68,88 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:layout_width="36dp"
-            android:layout_height="36dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:text="12"
             android:gravity="center"
             android:textColor="#FFFFFF"
             android:background="@drawable/bg_circle_selected"
-            android:layout_margin="4dp"/>
+            android:layout_marginEnd="10dp"/>
 
         <TextView
-            android:layout_width="36dp"
-            android:layout_height="36dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:text="13"
             android:gravity="center"
             android:textColor="#FFFFFF"
             android:background="@drawable/bg_circle_selected"
-            android:layout_margin="4dp"/>
+            android:layout_marginEnd="10dp"/>
 
         <TextView
-            android:layout_width="36dp"
-            android:layout_height="36dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:text="14"
             android:gravity="center"
             android:textColor="#FFFFFF"
             android:background="@drawable/bg_circle_selected"
-            android:layout_margin="4dp"/>
+            android:layout_marginEnd="10dp"/>
 
         <TextView
-            android:layout_width="36dp"
-            android:layout_height="36dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:text="15"
             android:gravity="center"
             android:textColor="#FFFFFF"
             android:background="@drawable/bg_circle_black"
-            android:layout_margin="4dp"/>
+            android:layout_marginEnd="10dp"/>
 
         <TextView
-            android:layout_width="36dp"
-            android:layout_height="36dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:text="16"
             android:gravity="center"
             android:textColor="#AAAAAA"
             android:background="@drawable/bg_circle_unselected"
-            android:layout_margin="4dp"/>
+            android:layout_marginEnd="10dp"/>
 
         <TextView
-            android:layout_width="36dp"
-            android:layout_height="36dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:text="17"
             android:gravity="center"
             android:textColor="#AAAAAA"
             android:background="@drawable/bg_circle_unselected"
-            android:layout_margin="4dp"/>
+            android:layout_marginEnd="10dp"/>
 
         <TextView
-            android:layout_width="36dp"
-            android:layout_height="36dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:text="18"
             android:gravity="center"
             android:textColor="#AAAAAA"
-            android:background="@drawable/bg_circle_unselected"
-            android:layout_margin="4dp"/>
+            android:background="@drawable/bg_circle_unselected" />
     </LinearLayout>
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="6dp"
+        android:background="#E0E0E0"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintTop_toBottomOf="@id/questionNumbers"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
         android:id="@+id/question"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Which of the following are true for objects of Python’s set type:"
+        android:text="Which of the following are true for objects of Python's set type:"
         android:textColor="#000000"
         android:textSize="16sp"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/questionNumbers"
+        app:layout_constraintTop_toBottomOf="@id/divider"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -149,34 +162,56 @@
         app:layout_constraintTop_toBottomOf="@id/question"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
-
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:clipChildren="false"
+    android:clipToPadding="false"
+    android:layout_marginBottom="12dp" >
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_answer_neutral"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="a. Sets are mutable."
-            android:background="@drawable/bg_answer_neutral"
-            android:padding="12dp"
             android:textColor="#000000"
-            android:textSize="14sp"
-            android:layout_marginBottom="8dp" />
-
-        <TextView
+            android:paddingHorizontal="35dp"
+            android:layout_gravity="center_vertical"
+            android:textSize="14sp" />
+    </FrameLayout>
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="b. The order of elements in a set is significant."
-            android:background="@drawable/bg_answer_selected"
-            android:padding="12dp"
-            android:textColor="#8B5CF6"
-            android:textSize="14sp"
-            android:layout_marginBottom="8dp" />
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            android:layout_marginBottom="12dp" >
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_answer_selected"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"/>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="35dp"
+                android:layout_gravity="center_vertical"
+                android:text="b. The order of elements in a set is significant."
+                android:textColor="#841FFD"
+                android:textSize="14sp" />
+        </FrameLayout>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="c. A set may contain elements that are mutable."
             android:background="@drawable/bg_answer_selected"
             android:padding="12dp"
-            android:textColor="#8B5CF6"
+            android:textColor="#841FFD"
             android:textSize="14sp"
             android:layout_marginBottom="8dp" />
 
@@ -193,21 +228,21 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="50dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/answersContainer"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:gravity="center">
+        android:gravity="center"
+        android:clipChildren="false"
+        android:clipToPadding="false">
 
         <FrameLayout
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:layout_weight="1"
             android:layout_marginEnd="8dp"
-            android:clipChildren="false"
-            android:clipToPadding="false">
+            android:clipChildren="false">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -219,8 +254,7 @@
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/bg_button_previous"
-                android:clipChildren="false"
-                android:clipToPadding="false"/>
+                android:clipChildren="false" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -229,15 +263,26 @@
                 android:paddingHorizontal="16dp"
                 android:text="Previous"
                 android:textColor="#797979"
-                android:textSize="14sp" />
+                android:textSize="15sp" />
         </FrameLayout>
 
-        <Button
+        <FrameLayout
             android:layout_width="0dp"
             android:layout_height="48dp"
-            android:layout_weight="1"
-            android:text="Next"
-            android:textColor="#FFFFFF"
-            android:background="@drawable/bg_button" />
+            android:layout_weight="1">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/bg_button"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Next"
+                android:textColor="#FFFFFF"
+                android:textSize="15sp" />
+        </FrameLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
